--- a/ms_1_abst_sig.Rmd
+++ b/ms_1_abst_sig.Rmd
@@ -1,23 +1,13 @@
 
 ## Abstract
 
-_questions for abstract style: voice (passive vs active, 'we' vs 'this paper'), tense (present vs past)..._
+Species distribution data provide the foundation for a wide range of ecological research and conservation science and management, yet most species ranges remain unknown, and existing range maps have little overlap. In the ocean, two global species distribution datasets - AquaMaps and the International Union for Conservation of Nature (IUCN) - dominate our understanding of marine species ranges throughout the world's oceans, representing `r nrow(spp_all)` species overall, mostly from AquaMaps, with only `r nrow(spp_map_pairs)` species overlapping.  
+Here we examine differences in predicted species ranges between the two datasets, propose mechanistic causes and potential solutions for such differences, and explore the implications of these differences for management and conservation decisions.
+We find that IUCN maps often disregard bathymetry for depth-limited species, leading to predictions of species presence at unsuitable depths, and AquaMaps ranges for data-poor species often extrapolate presence far afield from known occurrences.  
+We illustrate the implications of these differences by repeating two recent applications - the Ocean Health Index biodiversity goal and a global analysis of gaps in coverage of marine protected areas - and find significantly different estimates of the status of species diversity and effectiveness of conservation depending on which dataset was used.
+Understanding these issues points toward solutions for providers and users of these datasets.
 
-Two global datasets of species distribution maps - AquaMaps and the International Union for Conservation of Nature - dominate our understanding of marine species ranges throughout the world's oceans, and inform a wide range of biodiversity and conservation purposes.  This paper examines differences in predicted species ranges between the two datasets, proposes mechanistic causes and potential solutions for such differences, and explores the implications of these differences for management and conservation decisions.
 
-<!--
-The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.
-
-Importantly, biases in taxonomic or spatial coverage within a dataset could shift management or conservation actions away from places or species that are most in need.(maybe Jetz 2008?)  Inaccurate indications of presence or absence could lead to inefficient or ineffective marine reserve systems and management plans. (Rondinini et al. 2006) (Jetz 2008?)
--->
-Together, the two datasets provide range information for `r nrow(spp_all)` unique species, with only `r nrow(spp_map_pairs)` species common to both datasets.  When selecting one dataset over the other, spatial and taxonomic coverage should be considered against the scope of the project.
-<!--
-___what is the key takeaway for the taxonomic and spatial coverage analyses? can we say something about benefits of combining the two for better taxo coverage?___  Is this just tangential to the real storyline?  I think the taxonomic differences are important considerations when exploring the implications for OHI and MPA gap analysis
--->
-
-For the subset of species included in both datasets, we compare the distribution and extent of the pair of predicted ranges and identify several issues that commonly lead to misalignment between the two datasets.  Notably, IUCN maps often disregard bathymetry for depth-limited species, leading to predictions of species presence at unsuitable depths, and AquaMaps maps for data-poor species often extrapolate presence far afield from known occurrences.  Understanding these issues points toward solutions for providers and users of these datasets.
-
-We reexamine two recent global analyses that depend on these datasets: the Ocean Health Index biodiversity goal and a global analysis of gaps in coverage of marine protected areas.  Variations in which dataset is used, and how, lead to significantly different estimates of species diversity and conservation effectiveness.
 
 -----
 
