--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -3,16 +3,17 @@ output: html_document
 ---
 
 ``` {r calc species numbers, echo = FALSE}
-n_spp_am    <- nrow(spp_am)
-n_spp_am_reviewed <- nrow(spp_am %>% filter(reviewed == 1))
-p_spp_am_reviewed <- round(n_spp_am_reviewed/n_spp_am * 100, 1)
-n_spp_am_rl <- nrow(spp_am %>% filter(sciname %in% spp_iucn_marine$sciname))
-p_spp_am_rl <- round(n_spp_am_rl/n_spp_am * 100, 1)
-n_spp_iucn  <- nrow(spp_iucn_maps)
-n_spp_both  <- nrow(spp_map_pairs)
-p_both_am   <- round(n_spp_both/n_spp_am * 100, 1)
-p_both_iucn <- round(n_spp_both/n_spp_iucn * 100, 1)
-p_both_all  <- round(n_spp_both/nrow(spp_all) * 100, 1)
+n_spp_all    <- nrow(spp_all)
+n_spp_am     <- nrow(spp_am)
+n_spp_am_rev <- nrow(spp_am %>% filter(reviewed == 1))
+n_spp_iucn   <- nrow(spp_iucn_maps)
+n_spp_both   <- nrow(spp_map_pairs)
+
+p_spp_am     <- round(nrow(spp_am)/n_spp_all * 100, 1)
+p_spp_am_rev <- round(n_spp_am_rev/n_spp_am * 100, 1)
+p_both_am    <- round(n_spp_both/n_spp_am   * 100, 1)
+p_both_iucn  <- round(n_spp_both/n_spp_iucn * 100, 1)
+p_both_all   <- round(n_spp_both/n_spp_all  * 100, 1)
 ```
 
 # Introduction
@@ -23,56 +24,37 @@ _Peer beneath the waves anywhere in the world - a moody kelp forest, a bustling 
  and managing and protecting species effectively.
 A rich literature tackles the many dimensions of these questions.
 
-One major outcome of this body of science is the various compiled databases of species distribution maps. Two global-scale repositories _predict_ marine species ranges throughout the world's oceans – AquaMaps modeled species distribution maps (Kaschner et al. 2013) and International Union for Conservation of Nature (IUCN) species range maps (REF).  These two spatial datasets are used for a wide range of purposes, including assessing marine species status (Halpern et al. 2012, Selig et al. 2013), evaluating global biodiversity patterns (Coll et al. 2010, Martin et al. 2014), predicting range shifts (Molinos et al. 2015), and setting conservation priorities (Klein et al. 2015). 
+One major outcome of this body of science is the various compiled databases of species distribution maps. Two global-scale repositories predict marine species ranges throughout the world's oceans – AquaMaps modeled species distribution maps (Kaschner et al. 2013) and International Union for Conservation of Nature (IUCN) species range maps (REF).  These two spatial datasets are used for a wide range of purposes, including assessing marine species status (Halpern et al. 2012, Selig et al. 2013), evaluating global biodiversity patterns (Coll et al. 2010, Martin et al. 2014), predicting range shifts (Molinos et al. 2015), and setting conservation priorities (Klein et al. 2015). 
 
-The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.  Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans.(Rondinini et al. 2006) (Jetz 2008?)
+The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.  Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans (Rondinini et al. 2006) (Jetz 2008?).
 
-To understand the implications of differences between the AquaMaps and IUCN datasets, we compared how each data source represents the global spatial and taxonomic distribution of species.  For the `r p_both_all`% of species mapped in both datasets, we examined how well the species maps align and determined several issues that lead to misalignment between predicted species distributions, and outlined possible improvements. 
+To understand the implications of differences between the AquaMaps and IUCN datasets, we compared how each data source represents the global spatial and taxonomic distribution of species.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')`; `r p_spp_am`% of total), such that most global analyses related to biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` species).  For the `r format(n_spp_both, big.mark = ',')` (`r p_both_all`% of total) species mapped in both datasets, we examined how well the maps align and determined several issues that lead to misalignment between predicted species distributions, and outline possible improvements. 
 
-We then subjected two recent marine biodiversity studies - the Ocean Health Index biodiversity goal (Halpern et al. 2012) and a global analysis of gaps in protection afforded by marine protected areas (MPAs) (Klein et al. 2015) - to a sensitivity analysis, substituting one dataset over the other, to highlight the possible consequences of different data use decisions on our understanding of _the status of_ marine biodiversity. ___We found XXX... very briefly outline results?___
+We then subjected two recent marine biodiversity studies - an assessment of the status of global biodiversity within the Ocean Health Index (Halpern et al. 2012, 2015) and a global analysis of gaps in protection afforded by marine protected areas (MPAs) (Klein et al. 2015) - to a sensitivity analysis. ... ___substituting___ one dataset over the other, to highlight the possible consequences of different data use decisions on our understanding of _the status of_ marine biodiversity. ___BSH suggestion: We used all unique species range data from both sources but substituted one dataset over the other for shared species to highlight the possible consequences of different data use decisions on our understanding of the status of and protection of marine biodiversity.___
 
 -----
-
+<!--
 ## Overview of AquaMaps and IUCN datasets  
 
+___BSH comment: Fold this section into the methods and/or Supplementary Methods, or maybe into the results section just below on differences between the datasets – but make the description VERY brief.___
 
 The IUCN publishes species range maps as polygon shapefiles, bundled by taxonomic groups (REF).  Using a geographic information system (GIS), experts outline spatial polygons to represent a given species' extent of occurrence, based on observation records and refined by expert understanding of the species' range and habitat preferences.  _IUCN releases a range map bundle for a taxonomic group once it has been "comprehensively assessed," i.e. at least 90% of the species within the taxonomic group have been evaluated (REF)._  While this mitigates sampling bias within taxa, it also means that entire taxonomic groups remain unavailable until they have met this threshold of comprehensive assessment.  
 
-AquaMaps develops species distribution maps based on modeled relative environmental suitability.  For each mapped species, environmental preferences (e.g. temperature, depth, salinity) are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of probability of occurrence for each species.  A subset of the resulting distribution maps (`r n_spp_am_reviewed` of `r n_spp_am` species maps; `r p_spp_am_reviewed`%) have been checked or formally reviewed by experts, to validate and improve the parameters and underlying model.
+AquaMaps develops species distribution maps based on modeled relative environmental suitability.  For each mapped species, environmental preferences (e.g. temperature, depth, salinity) are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of probability of occurrence for each species.  A subset of the resulting distribution maps (`r format(n_spp_am_rev, big.mark = ',')` of `r format(n_spp_am, big.mark = ',')` species maps; `r p_spp_am_rev`%) have been checked or formally reviewed by experts, to validate and improve the parameters and underlying model.
 
 IUCN range maps are intended to include all possible regions in which a species may be present, with the caveat that this does not imply the species is evenly distributed everywhere within the boundaries of the map(REF).  AquaMaps modeled distribution maps provide a more nuanced prediction of species presence within the extent of occurrence, but the model may not capture all the complexities that drive species distribution (REF).  Due to these differences in methodology and intent, IUCN range maps are more likely to overpredict species presence (and underpredict absence) while AquaMaps modeled distribution maps are relatively more likely to underpredict species presence.(REF and REF)
-
------
+-->
 
 # Results and Discussion
 
-## Comparing the two datasets
+## How and why the datasets differ
 
-### Taxonomic distribution between datasets
+The IUCN publishes species range maps as polygon shapefiles, bundled by taxonomic groups (REF).  Using a geographic information system (GIS), experts outline spatial polygons to represent a given species' "limits of distribution" (IUCN 2014) - essentially a refined extent of occurrence, based on observation records and refined by expert understanding of the species' range and habitat preferences.  AquaMaps models species distribution maps based environmental preferences (e.g. temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of probability of occurrence for each species.
 
-___I wonder if this section is becoming less a part of the "story", maybe this part should go in SOM?___ _- though I think it's pretty important to understand that there is a huge difference in which species and taxonomic groups are covered in each set.  That also helps to explain why there is such a small overlap, and helps show that the overlapping species are not necessarily representative?  It also provides a logical lead-in from description of the overall datasets to the analysis of just the overlapping portion of the datasets._
-
-Each dataset offers spatial distribution information for large numbers of species (`r n_spp_am` AquaMaps-mapped species; `r n_spp_iucn` IUCN-mapped marine species).  However, the datasets vary in terms of taxonomic coverage and regional coverage, with only `r n_spp_both` species included in both datasets (`r p_both_am`% of AquaMaps species; `r p_both_iucn`% of IUCN marine species; <a href = '#fig1'>Figure 1a</a>).
-
-The distribution of IUCN-mapped species skews toward tropical latitudes and away from the Atlantic and Eastern Pacific compared to the distribution of AquaMaps-mapped species.(<a href = '#fig1'>Figure 1b and 1c</a>)  This skew likely reflects the fact that the IUCN dataset focuses more heavily on coral reef-associated taxa than does the AquaMaps dataset (see <a href = '#fig1'>Figure 1a</a>).
-
-For spatial assessments of biodiversity, the choice of one dataset over the other is likely to result in significantly different conclusions.  For studies confined to a narrow range of taxa or to a narrow spatial scale, one dataset may offer an advantage over the other in the number of mapped species available.  For global scale biodiversity studies, however, the selection of one dataset over the other will entail tradeoffs in spatial coverage and taxonomic breadth versus depth._use something from Rondinini here?_
-
-_Small overlap means that using both datasets in conjunction will add a huge number of species without duplicating efforts, if the differences between the two methods can be reconciled appropriately_
-
-_find a reference that describes what makes a "good" dataset for global biodiversity, e.g. OHI, or maybe species richness vs diversity vs "health" or whatnot:  (Tittensor et al., 2010)_
+The two datasets have notably different taxonomic (Fig. 1A) and regional (Fig. 1B,C) coverage. IUCN-mapped species focus on tropical latitudes and away from the Atlantic and Eastern Pacific compared to AquaMaps-mapped species. These differences can be mitigated by using both datasets, but the underlying methodological differences complicate such direct comparisons, and furthermore ___requires resolving differences (or choosing one source over the other) for the `r format(n_spp_both, big.mark = ',')` shared species.___
 
 -----
 
-### Defining spatial alignment between the two datasets
-
-The IUCN and AquaMaps spatial datasets share `r nrow(spp_map_pairs)` species in common.  Placing each of these species' pair of maps side by side, we would hope to see spatial correlation both in the global pattern of species distribution (where on the map) and the extent of species range (how much of the map).
-
-<!-- NOT REALLY PART OF THE STORY? INCLUDE IN SOM?
-In `r round(nrow(spp_map_pairs %>% filter(sm_range == 'AM')) / nrow(spp_map_pairs) * 100, 1)`% of cases, the IUCN range map indicated a larger species range than the AquaMaps map.  This finding concurs with the general expectation that geographic range maps such as IUCN are more likely to over-predict presence and under-predict absence than distribution models such as AquaMaps.(Rondinini et al., 2006) _errors of commission vs errors of omission, essentially type I and type II errors - should I use one of these terms to clarify?_
--->
-
-Dividing the map-paired species into quadrants based on median values for each dimension allows us to examine the _implications_ of four different qualities of alignment. (<a href = '#fig2'>Figure 2a</a>)
 
 ``` {r load_spp_list_by_quad, echo = FALSE}
 spp_list_quads <- read.csv('data/spp_list_quads.csv', stringsAsFactors = FALSE)
@@ -85,38 +67,21 @@ n_q3 <- nrow(spp_list_quads %>% filter(quad == 'q3'))
 n_q4 <- nrow(spp_list_quads %>% filter(quad == 'q4'))
 ```
 
-Quadrant 1 highlights species whose map pairs agree in both spatial distribution and the extent of described ranges, as we would expect for well-understood species.  Examining spatial alignment by taxonomic group (<a href = '#fig2'>Figure 2b</a>), we found that certain taxa were far more likely than others to be spatially well-aligned; in particular, wide-ranging pelagic organisms (50% or more of ocean area) such as marine mammals, tunas, and billfishes were more consistently well-aligned than demersal and reef organisms.  _propose an explanation here? basically - these species go pretty much anywhere, so both maps predict most of the ocean, you'll get a good overlap - not really that revolutionary_ 
+___BSH suggestion___ To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (where on the map) against the ratio of extent (how much of the map) for each shared species (Fig. 2a). __Overall we see a negative linear relationship, where increasing similarity in extent (extent ratio approaches 100%) correlates with a decrease in alignment.  [explain/discuss].__  
 
-The extent-misaligned maps contained in quadrant 2 provide a richer set of examples to understand the fundamental differences between the datasets; examining these, we can identify several mechanisms that could cause such extent misalignment.  
+Dividing the map-paired species into quadrants highlights different categories of relationships. The upper right quadrant includes species (n = `r n_q1`) whose map pairs agree in both spatial distribution and extent of described ranges. These species tend to be well-studied and predominantly fall within wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because they exist nearly everywhere.
 
-For `r n_q2_am_sm` of `r n_q2` species in quadrant 2 (`r round((n_q2_am_sm/n_q2) * 100, 1)`%), the IUCN extent is larger than the AquaMaps extent.  For many of these species, a quick look at the maps (see SOM for examples) shows that the IUCN range hews closely to the AquaMaps range, while adding a significant buffer zone.  Coral species dominate this quadrant (`r n_q2_corals` coral species - `r round(n_q2_corals/n_corals * 100, 1)`% of all corals and `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in quadrant 2).  Most corals and reef-associated organisms prefer shallower waters, and we suspect that many of these extent-misaligned map pairs can be easily explained: seafloor depth is explicitly included in AquaMaps models, while depth is frequently ignored as a factor in IUCN range maps, leading to overprediction of species range into areas too deep to support the species. (For examples and details, see SOM) 
+The extent-mismatched maps contained in the upper left quadrant (n = `r n_q2`) provide a richer set of examples to understand the fundamental differences between the datasets.  For many of these species, while the spatial distribution is similar, the IUCN range predicts a significant buffer zone beyond the AquaMaps range.  Corals dominate this quadrant (`r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant).  Most corals and reef-associated organisms prefer shallower waters, and we suspect that many of these disagreements in extent can be explained by bathymetry: seafloor depth is explicitly included in AquaMaps models, while depth is frequently ignored as a factor in IUCN range maps, leading to overprediction of species range into areas too deep to support the species. (For examples and details, see SOM) 
 
-* ___verify some of the coral maps by saving raster, showing raster and polygons in QGIS against a bathymetry layer___ - put a map for Oculina varicosa (and others?) in the SOM
-* ___include recommendation for IUCN range maps to be clipped to bathymetry where appropriate? or save til end?___ 
+The differences in extent of species maps found in the lower right quadrant (n = `r n_q3`) can in many cases be attributed to "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence.  This results in an area ratio close to 100%, but similar extents are meaningless when the distributions are poorly aligned.
 
-The extent-alignment of species maps found in quadrant 3 can in many cases be attributed to "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable habitat, as in the case of many quadrant 2 species, while at the same time, AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence.  This results in an area ratio close to 100%, giving the impression of extent alignment. ___this quadrant seems to be a false alignment then? should there be a stronger warning here___
+Moving from the lower right to lower left quadrant, AquaMaps more frequently extrapolates species presence well beyond known occurrences, resulting in poor matches in both distribution and extent.  Of the `r n_q4` species in this quadrant, 159 (39.7%) are data-poor (in which the AquaMaps environmental envelope model is based on fewer than 10 known cell occurrences), compared with 21.1% for the full set of map-paired species and only 8.2% of species in the upper left quadrant.  A mere 6.2% of AquaMaps maps in this quadrant have undergone expert review, compared with 13.4% of all map-paired species and 24.9% of species in the upper left quadrant.
 
-Quadrant 4 species maps suffer from the same issues as those in quadrant 3, but here the AquaMaps extrapolation extends even further, pushing the extent alignment ratio lower.  In this quadrant, AquaMaps predicts a larger extent than IUCN for 70% of species represented in this quadrant, compared with just 30% of species in the entire set of overlapping maps _(this is supposed to show that much of this quadrant is based on overextrapolation of AquaMaps... not sure that's clear yet)_. AquaMaps range maps in quadrant 4 include a high proportion of data-poor species in which the environmental envelope model is based on fewer than 10 known cell occurrences, and at the same time include fewer reviewed species maps than the other quadrants.
-
-
-___table to show data poor status and reviewed status for AquaMaps maps represented in the quadrant plot___ _- perhaps update the quadrant plot to reveal data-poor species (and reviewed species? little overlap of reviewed & data-poor) instead of, say, red-list category which doesn't get discussed in the body of the paper?  then this table can go in SOM if we like it_
-
-| quadrant | n species | n data poor species | n reviewed species |
-| :------: | :-------: | :-----------------: | :----------------: |
-| overall  |   22889   |        8749 (38.2%) |       1296  (5.7%) |
-| AM&IUCN  |    2166   |         457 (21.1%) |        290 (13.4%) |
-|   q1     |     401   |          33  (8.2%) |        100 (24.9%) |
-|   q2     |     682   |         151 (22.1%) |        100 (14.7%) |
-|   q3     |     682   |         114 (16.5%) |         65  (9.5%) |
-|   q4     |     410   |         159 (39.7%) |         25  (6.2%) |
-
-_data poor = fewer than 10 points used to generate the environmental envelopes; reviewed = map checked or formally expert-reviewed_
-
-_Other hypotheses/case studies to highlight other possible mechanistic differences?_  I think we found a couple of the big ones; good enough?
-
+This breakdown by quadrant helps explain the negative linear relationship seen in the plot, in which increasing similarity in extent correlates with decreasing distribution alignment.  Expanding species range beyond known occurrences, the marginal range predicted by the AquaMaps model will fall in different locations than the marginal range predicted using IUCN methodology.  For species with dissimilar extents, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range.  As we examine species with increasingly similar extents, the differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
 
 -----
-# Implications
+
+# Implications of the differences
 
 ___From JSL:___ _I think you need a broader discussion of implications. How many times has IUCN/Aquamaps been cited? How long have they been around? What scales are the studies? Then you can muse about how results/interpretations would be different depending on which dataset they used, and reference Fig 3’s._
 
@@ -124,7 +89,7 @@ _Then, say for example, the OHI uses these datasets together (don’t need to ge
 
 ## Application to OHI
 
-The global Ocean Health Index (OHI) (Halpern et al. 2012), a composite index made up of 10 goals, utilizes both of these datasets to inform the Species subgoal of the Biodiversity goal.  As it is currently calculated, the Species subgoal uses species spatial distribution data and IUCN Red List conservation status to calculate an area-weighted mean species status in each of 221 exclusive economic zones. Spatial distributions were gleaned from both IUCN and AquaMaps datasets, preferring IUCN data for species represented in both data sets.  OHI uses a probability threshold of 40% to determine species presence for AquaMaps data.  Species with no spatial data in either dataset were excluded, as were species with insufficient information to determine conservation status (including species listed as not evaluated or data deficient).
+The global Ocean Health Index (OHI) (Halpern et al. 2012, 2015), a composite index made up of 10 goals, uses species spatial distribution data and IUCN Red List conservation status to calculate biodiversity status for each of 221 exclusive economic zones. To maximize the number of represented species, spatial distributions were gleaned from both IUCN and AquaMaps datasets, preferring IUCN data for species in both sources.  OHI uses a probability threshold of 40% to determine species presence for AquaMaps data.  Species with no spatial data in either dataset were excluded, as were species with insufficient information to determine conservation status (including species listed as not evaluated or data deficient).
 
 _Briefly summarize results_
 
@@ -152,25 +117,23 @@ _Predictions:  What happens when using a 0% threshold instead of a 50%?  What ha
 
 -----
 
-## Wrap it up
+# Conclusions: What can be done to address the differences
 
-___Recommendations on data use?___
+_While the differences between species distributions described by AquaMaps and IUCN can drive different conclusions for conservation research, some of the mechanistic causes can be addressed._ ___oh god this section is so passive voice... arrrrgghhhh___
 
-* IUCN mapmakers
-    * at least clip polygons to bathymetry for depth-sensitive species, come on now people, it's really pretty obvious.  
-    * Note something about how photosynthetic marine species, and the species that depend on them, are far more sensitive to bathymetry than terrestrial species are to altitude... 
-    * Note that this is explicitly mentioned in the [training for IUCN red list marine maps](https://www.conservationtraining.org/mod/scorm/player.php?a=1412&currentorg=M5L1_ORG&scoid=6492) 
-        - "bathymetry can be used to delineate species' ranges limited by depth in the same way as elevation is used for terrestrial species"
+__For data providers:__
 
-* AquaMaps mapmakers
-    * get expert eyeballs on all the maps
-    * revisit the decision to use data-poor species... or at least make it more up-front about the ramifications of including the data-poor species
+* The training manual for experts creating IUCN Red List maps for marine species suggests that "bathymetry can be used to delineate species' ranges limited by depth in the same way as elevation is used for terrestrial species" (REF https://www.conservationtraining.org/mod/scorm/player.php?a=1412&currentorg=M5L1_ORG&scoid=6492).  Unfortunately, this recommendation appears to be applied haphazardly.  Especially for demersal communities dependent on photosynthesis, bathymetry should be a primary consideration; even a low resolution cutoff of 200 meters would improve the utility of species range maps.
 
-* Users
-    * understand that range maps tend to overestimate presence; AquaMaps are less likely to overestimate presence, but trade off for overestimating absence. Both better than simple point locality data.
-    * to use both together:
-        * consider setting AM presence threshold to 0% to create an extent of occurrence map, more like IUCN map.
-        * consider additional filters and criteria, e.g. `reviewed` and/or `occurcells` to avoid over-extrapolation problem
-        * consider clipping IUCN ranges to bathymetry for depth-limited species or taxa
-        * or consider de-weighting IUCN for area-weighted calcs, for taxa in which IUCN is consistently overestimating presence
-        
+* The AquaMaps model is a powerful tool for quickly estimating species presence based on limited information; however, the model's output is only as good as the input data, which for marine species is often sorely limited.  AquaMaps encourages experts to review and comment on the predicted species distribution maps; lessons from the small sample of reviewed maps can be generalized, for example to other species in the same taxonomic group, to further refine the predictions, especially for data-poor species.
+
+* In addition to environmental preferences and conditions, AquaMaps mapping parameters include area restrictions to help limit over-extrapolation of AquaMaps models.  Currently the area restrictions are denoted by FAO Major Fishing Areas (REF find a reference in AquaMaps somewhere); however, allowing area restrictions based on biogeographical criteria, a la MEOW, would likely have better resolution and predictive power, especially for data-poor species.
+
+__For data users:__
+
+* understand that range maps a la IUCN tend to overestimate presence; AquaMaps are less likely to overestimate presence, but trade off for overestimating absence. Both better than simple point locality data. (Rondinini etc)
+* Using both datasets together can increase the taxonomic and spatial breadth of coverage, as long as the differences between the datasets can be reasonably minimized.  Consider:
+    * An AquaMaps presence threshold of 0% more closely approximates the "limits of distribution" outlined by IUCN range maps.
+    * Additional filters and criteria on AquaMaps distribution maps can help avoid overextrapolation for data poor species.  The AquaMaps native range dataset includes information on expert review and the number of occurrence cells used to generate the environmental envelope.
+    * For depth-limited species or taxa, clipping IUCN range polygons to a reasonable bathymetry contour can limit overprediction of species presence into unsuitable habitats.
+
